--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JohnmartyWeek7Assessment</title>
+  <title>gSchool</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -19,7 +19,7 @@
   <br>
   <br>
 
-<%=link_to "Home", root_path %> | <%=link_to "List of manufacturers", manufacturers_path %> |  <%=link_to "About", about_index_path %> 
+<%=link_to "Home", root_path %> | <%=link_to "Courses", courses_index_path %> 
 
 <% if notice %>
 <h2><center><%= notice %></center></h2>
