--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,3 +3,32 @@
 
 
 
+<table>
+  <thead>
+    <tr>
+      <th>Course Title</th>
+      <th>Day or Night?</th>
+    </tr>
+  </thead>
+
+
+<tbody>
+
+   <%= link_to 'Create course', new_course_path %>
+   <br>
+   <br>
+
+<% @courses.each do |course| %>
+  <tr>
+    <td><%= link_to course.title, course_path(course) %></td>    
+    <td><%= course.day_or_night %></td>
+	<td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+      
+    <% end %>
+
+</tbody>
+
+
+
+       
